--- a/css/style.css
+++ b/css/style.css
@@ -23,55 +23,54 @@ body {
 
 .container {
   max-width: 120rem;
-  margin: 8rem auto;
+  margin: 6rem auto;
   background-color: var(--color-grey-light-1);
   -webkit-box-shadow: var(--shadow-dark);
   box-shadow: var(--shadow-dark);
   min-height: 50rem; }
 
-.navigation__nav {
-  font-family: 'Nunito Sans', sans-serif;
-  font-weight: light 300;
-  font-size: 1.5rem;
-  color: #eeeeee;
+.navigation {
   display: flex;
-  list-style: none;
-  margin: 2rem;
-  justify-content: space-around; }
-  .navigation__nav > * {
-    margin: 2rem; }
-
-.navigation__name {
-  flex: 0 1 30%;
-  border-bottom: 4px solid;
-  border-image: linear-gradient(to right, #00d2ff, #3a7bd5);
-  border-image-slice: 1; }
-
-.navigation__projects {
-  align-self: flex-start; }
-  .navigation__projects:hover {
+  justify-content: space-around;
+  align-items: center;
+  font-family: 'Nunito Sans', sans-serif;
+  font-weight: 300;
+  font-size: 1.7rem;
+  color: #eeeeee; }
+  .navigation__nav {
+    display: flex;
+    list-style: none;
+    margin: 2rem;
+    justify-content: space-between; }
+    .navigation__nav > * {
+      margin: 2rem; }
+  .navigation__logo {
+    display: inline;
+    border: 3px #00adb5 solid;
+    border-radius: 3rem;
+    padding: 0.7rem; }
+  .navigation__projects {
+    align-self: flex-start; }
+    .navigation__projects:hover {
+      color: #00adb5; }
+  .navigation__blog a {
+    text-decoration: none;
+    color: currentColor; }
+    .navigation__blog a:hover {
+      color: #00adb5; }
+  .navigation__about:hover {
     color: #00adb5; }
-
-.navigation__blog a {
-  text-decoration: none;
-  color: currentColor; }
-  .navigation__blog a:hover {
+  .navigation__contact:hover {
     color: #00adb5; }
-
-.navigation__about:hover {
-  color: #00adb5; }
-
-.navigation__contact:hover {
-  color: #00adb5; }
 
 .intro {
   font-family: 'Nunito Sans', sans-serif;
-  font-weight: light 300;
+  font-weight: light 200;
+  height: 25rem;
+  display: flex;
   margin-top: 5rem;
-  height: 500px;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover; }
+  flex-direction: column;
+  justify-content: center; }
   .intro__name {
     text-align: center;
     color: #eeeeee;
@@ -81,3 +80,18 @@ body {
     color: #eeeeee;
     padding: 1rem 8rem;
     font-size: 1.75rem; }
+
+.post__feed {
+  display: flex;
+  flex-direction: column;
+  color: #eeeeee;
+  margin-top: 10rem; }
+  .post__feed-header {
+    flex-grow: 1;
+    font-size: 1.5rem; }
+
+.post {
+  background-color: #393e46; }
+
+.footer {
+  background-color: #00adb5; }
