--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -1,10 +1,9 @@
 .container{
-    max-width: 120rem;
-    margin: 6rem auto;
     background-color: var(--color-grey-light-1);
-    -webkit-box-shadow: var(--shadow-dark);
-    box-shadow: var(--shadow-dark);
-    min-height: 50rem;
+    display:grid;
+    width:100vw;
+    height:100vh;
+    grid-template-rows: repeat(5, 1fr);
     }
 
 
@@ -12,11 +11,12 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  font-family: 'Nunito Sans',
-  sans-serif;
-  font-weight: 300;
-  font-size:1.7rem;
+  font-family: $font-primary;
+  font-weight: regular;
+  font-size:1.6rem;
+  padding:3rem;
   color: $color-grey-light-1;
+  background-color: $color-secondary;
 
     &__nav{
         
@@ -71,56 +71,128 @@
 
 }
 
-.intro {
 
-      font-family: 'Nunito Sans',
-     sans-serif;
-      font-weight: light 200;
-      height: 25rem;
-     display:flex;
-     margin-top: 5rem;
-     flex-direction: column;
-     justify-content: center;
+.intro{
     
-    &__name {
+    background-color: $color-secondary;
+    align-items: center;
+    font-family: $font-primary;
+    font-weight: 300;
+    font-size:2rem;
+    padding:3rem 0rem;
+    margin-top:-1rem;
+    color: $color-grey-light-1;
+    &__name{
         text-align: center;
-        color: $color-grey-light-1;
-        font-size:3.5rem;
+
+        &-primary{
+            color:$color-tertiary;
+        }
     }
 
-    &__description {
-        text-align: justify;
-        color: $color-grey-light-1;
-        padding: 1rem 8rem;
-        font-size:1.75rem;
 
-       
+    &__description{
+
+        text-align: center;
+        width:66.666667%;
+        margin-left:auto;
+        margin-right:auto;
+        margin-top:2rem;
     }
-  
+
 }
 
+.recent_posts{
+    text-align: center;
+    color:$color-tertiary;
+    font-family: $font-primary;
+    font-weight: Bold;
+    font-size:2rem; 
+    align-self: center;
+    justify-content: center;
+    padding:3rem;
+}
 
 .post__feed{
+
     display:flex;
     flex-direction: column;
-    color: $color-grey-light-1;
-    margin-top: 10rem;
+    justify-content: center;
+    align-items: center;
+   
 
-    &-header{
-        flex-grow: 1;
-        font-size:1.5rem;
+}
 
+.post{
+ font-family: $font-primary;
+ color:$color-grey-light-1;
+ width:66.666667%;
+ margin-left:auto;
+ margin-right:auto;
+ margin-top:1rem;
+ margin-bottom:5rem;
+ &-link{
+    color:$color-grey-light-1;
+    text-decoration: none;
+}
+ &__header{
+   
+    font-size: 1.8rem;
+    text-align: start;
+ }
+
+ &__snippet{
+     font-size:1.6rem;
+     text-align: justify;
+     opacity: 0.7;
+ }
+
+ &__metadata{
+     display:flex;
+     margin-top: 1rem;
+     justify-content: start;
+     font-style: $font-primary;
+     font-size: 1.2rem;
+     font-weight: 600;
+     opacity: 0.8;
+     &-pubDate{
+        margin-right: 2rem;
+     }
+ }
+
+}
+
+
+.footer{
+    background-color: $color-secondary;
+
+    &__content{
+        color:$color-grey-light-1;
+        display:flex;
+        justify-content: space-between;
+        width:66.666667%;
+        margin-left:auto;
+        margin-right:auto;
+        margin-top: 1.5rem;
+        padding:2rem;
+
+        &-copyright{
+            font-size: 1.3rem;
+        }
+        
+        &-media{
+            list-style: none;
+            display:flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 1.3rem;
+
+            & li a{
+                padding-right:2rem;
+                text-decoration: none;
+                color:$color-grey-light-1;
+            }
+        }
     }
-}
-
-.post {
-    background-color: #393e46;
     
-}
-
-
-
-
-.footer {
-    background-color: #00adb5;
 }
