--- a/css/style.css
+++ b/css/style.css
@@ -149,3 +149,72 @@ body {
         padding-right: 2rem;
         text-decoration: none;
         color: #eeeeee; }
+
+.projects__heading {
+  color: #00adb5;
+  text-align: center;
+  margin-top: 3rem;
+  margin-bottom: 3rem; }
+
+.project__feed {
+  display: flex;
+  flex-direction: column;
+  width: 66.66667%;
+  margin-left: auto;
+  margin-right: auto; }
+
+.img__container {
+  width: 100%; }
+
+.project {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+  grid-column-gap: 2rem;
+  background-color: #393e46;
+  width: 100%;
+  margin-bottom: 3rem;
+  border-radius: 2rem;
+  overflow: hidden;
+  justify-content: center;
+  transition: all .2s ease-in-out; }
+  .project__img {
+    width: 100%;
+    object-position: center;
+    object-fit: cover;
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+    margin-right: 2rem;
+    align-self: stretch; }
+  .project:hover {
+    transform: scale(1.1); }
+
+.project__info {
+  display: flex;
+  flex-direction: column;
+  font-size: 1.6rem;
+  justify-content: center; }
+  .project__info-name {
+    font-size: 1.8rem;
+    color: #00adb5;
+    text-align: center;
+    margin-top: 2rem;
+    margin-bottom: 2rem; }
+  .project__info-description {
+    font-size: 1.2rem;
+    opacity: 0.8;
+    color: #eeeeee;
+    text-align: start;
+    margin-bottom: 2rem; }
+
+.project__info-tags {
+  display: flex;
+  justify-content: center;
+  color: #eeeeee;
+  opacity: 0.7; }
+  .project__info-tags span {
+    background-color: #222831;
+    padding: 1rem;
+    margin: 1rem;
+    border-radius: 1rem;
+    font-size: 1.2rem; }
