--- a/css/style.css
+++ b/css/style.css
@@ -47,10 +47,16 @@ body {
     border: 3px #00adb5 solid;
     border-radius: 3rem;
     padding: 0.7rem; }
+    .navigation__logo a {
+      text-decoration: none;
+      color: currentColor; }
   .navigation__projects {
     align-self: flex-start; }
     .navigation__projects:hover {
       color: #00adb5; }
+    .navigation__projects a {
+      text-decoration: none;
+      color: currentColor; }
   .navigation__blog a {
     text-decoration: none;
     color: currentColor; }
@@ -151,10 +157,11 @@ body {
         color: #eeeeee; }
 
 .projects__heading {
-  color: #00adb5;
+  color: #eeeeee;
   text-align: center;
   margin-top: 3rem;
-  margin-bottom: 3rem; }
+  margin-bottom: 3rem;
+  font-size: 2.2rem; }
 
 .project__feed {
   display: flex;
@@ -176,16 +183,13 @@ body {
   margin-bottom: 3rem;
   border-radius: 2rem;
   overflow: hidden;
-  justify-content: center;
   transition: all .2s ease-in-out; }
   .project__img {
     width: 100%;
+    height: 100%;
     object-position: center;
-    object-fit: cover;
-    border-top-left-radius: 2rem;
-    border-bottom-left-radius: 2rem;
-    margin-right: 2rem;
-    align-self: stretch; }
+    object-fit: fill;
+    border-radius: 2rem; }
   .project:hover {
     transform: scale(1.1); }
 
@@ -194,6 +198,9 @@ body {
   flex-direction: column;
   font-size: 1.6rem;
   justify-content: center; }
+  .project__info-link {
+    color: #eeeeee;
+    text-decoration: none; }
   .project__info-name {
     font-size: 1.8rem;
     color: #00adb5;
@@ -218,3 +225,10 @@ body {
     margin: 1rem;
     border-radius: 1rem;
     font-size: 1.2rem; }
+
+.heading {
+  font-size: 2.2rem;
+  text-align: center;
+  padding-bottom: 5rem;
+  padding-top: 5rem;
+  color: #eeeeee; }
